Fixing the alignment of the main logo. Fixes #157 (at least hopefully, didn't have a device to test)

--- a/app/less/icons.less
+++ b/app/less/icons.less
@@ -2,12 +2,16 @@
     display: none;
 }
 
+.main-logo-link {
+    display: inline-block;
+    padding-top: 10px
+}
+
 .main-logo {
     display: inline-block;
     fill: @colorDark;
     width: 150px;
-    height: 45px;
-    padding-top: 10px;
+    height: 35px;
     text-align: left;
     color: @colorDark;
 }
